--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -8,7 +8,7 @@
   </ng-container>
 
   <ng-container *ngIf="ws.getStorage().length!=0 ">
- <button  [disabled]="!isDetailSearchPerformed" (click)="callWishProduct(currentRow['itemId']['0'],currentRow.title,currentRow)" >Detail</button>
+ <button  [disabled]="!isDetailSearchPerformed" (click)="callWishProduct(currRow['itemId']['0'],currRow.title,currRow)" >Detail</button>
 <table class="table table-dark table-striped container">
   <tr>
     <th scope="col">#</th>
