clear button implemented

--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -187,14 +187,16 @@
 
   </ul>
 </div>
+<div class="tab-content" id="myTabContent">
 <div class="tab-pane fade show active" id="results" role="tabpanel" aria-labelledby="resultTab">
   <app-results></app-results>
 </div>
 
-<div class="tab-pane fade show active"  id="wishlist"  role="tabpanel"  aria-labelledby="wishTab">
+<div class="tab-pane fade"  id="wishlist"  role="tabpanel"  aria-labelledby="wishTab">
 
   <app-wishlist></app-wishlist>
 
+</div>
 </div>
 
 
