--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -1,184 +1,171 @@
 <div class="row">
-<div class="col-2"></div>
-<div id="formDiv" name="formDiv" class="container col-8" style="color: white;background-color: black; font-size: 12px;margin-top: 10px">
+  <div class="col-2"></div>
+  <div id="formDiv" name="formDiv" class="container col-8"
+       style="color: white;background-color: black; font-size: 12px;margin-top: 10px">
 
-  <p style="text-align: center; font-size: 20px;margin-bottom: 10px;margin-top: 2px;">Product Search</p>
+    <p style="text-align: center; font-size: 20px;margin-bottom: 30px;margin-top: 15px;"><strong>Product Search</strong></p>
 
-  <form id="mainForm" #prodForm="ngForm"  (ngSubmit)="onFormSubmit(prodForm)"   autocomplete="off">
-    <div class="form-group row" >
+    <form id="mainForm" #prodForm="ngForm" (ngSubmit)="onFormSubmit(prodForm)" autocomplete="off">
+      <div class="form-group row">
 
-      <label for="kword" class="col-sm-2 col-form-label reqField">Keyword</label>
-      <div class="col-sm-7">
-        <input type="text" name="kword" id="kword" placeholder="Enter product Name(eg.Iphone 8)"
-                class="form-control"  [class.is-invalid]="searchword.invalid && searchword.touched" appKeywordValid
-               [(ngModel)]="formdetails.kword" required #searchword="ngModel">
-        <span *ngIf="searchword.invalid && searchword.touched" class="help-block" style="color: red">Please enter a keyword</span>
-      </div>
-    </div>
-    <div class="form-group row">
-      <label for="category" class="col-sm-2 col-form-label">
-        Category&nbsp;
-      </label>
-      <div class="col-sm-3">
-        <select name="category" id="category" class="form-control"
-                [(ngModel)]="formdetails.category">
-          <option value="-1" name="allcat">All categories</option>
-          <option disabled>-----------------------------------</option>
-          <option value="550" name="Art">Art</option>
-          <option value="2984" name="Baby">Baby</option>
-          <option value="267" name="Books">Books</option>
-          <option value="11450" name="clothes">Clothing, Shoes & Accesories</option>
-          <option value="58058" name="comp">Computers/Tablets & Networking</option>
-          <option value="26395" name="health">Health & Beauty</option>
-          <option value="11233" name="music">Music</option>
-          <option value="1249" name="games">Video Games & Consoles</option>
-        </select>
-      </div>
-    </div>
-    <!--starts here-->
-    <div class="form-group row">
-      <label for="conditionChkBx" class="col-sm-2 col-form-label">
-        Condition
-      </label>
-      <div class="col-sm-7">
-        <div class="form-check form-check-inline" id="conditionChkBx">
-          <input type="checkbox" name="conditionNew" id="conditionNew" class="form-check-input form-control"
-                 [(ngModel)]="formdetails.conditionNew">
-          <label for="conditionNew" class="form-check-label">New</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input type="checkbox" name="conditionUsed" id="conditionUsed" class="form-check-input form-control"
-                 [(ngModel)]="formdetails.conditionUsed">
-          <label for="conditionUsed" class="form-check-label">Used</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input type="checkbox" name="conditionUnspecified" id="conditionUnspecified"
-                 class="form-check-input form-control" [(ngModel)]="formdetails.conditionUnspecified">
-          <label for="conditionUnspecified" class="form-check-label">Unspecified</label>
+        <label for="kword" class="col-sm-2 col-form-label reqField">Keyword</label>
+        <div class="col-sm-7">
+          <input type="text" name="kword" id="kword" placeholder="Enter product Name(eg.Iphone 8)"
+                 class="form-control" [class.is-invalid]="searchword.invalid && searchword.touched" appKeywordValid
+                 [(ngModel)]="formdetails.kword" required #searchword="ngModel">
+          <span *ngIf="searchword.invalid && searchword.touched" class="help-block" style="color: red">Please enter a keyword</span>
         </div>
       </div>
-    </div>
-    <!--ends here-->
-
-
-    <div class="form-group row">
-      <label for="shipbox" class="col-sm-2 col-form-label">
-        Shipping Options
-      </label>
-      <div class="col-sm-7">
-        <div class="form-check form-check-inline" id="shipbox">
-          <input type="checkbox" name="shippingLocal" id="ship1" class="form-check-input form-control"
-                 [(ngModel)]="formdetails.shippingLocal">
-          <label for="ship1">Local Pickup</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input type="checkbox" name="shippingFree" id="ship2" class="form-check-input form-control"
-                 [(ngModel)]="formdetails.shippingFree">
-          <label for="ship2">Free Shipping</label>
+      <div class="form-group row">
+        <label for="category" class="col-sm-2 col-form-label">
+          Category&nbsp;
+        </label>
+        <div class="col-sm-3">
+          <select name="category" id="category" class="form-control"
+                  [(ngModel)]="formdetails.category">
+            <option value="-1" name="allcat">All categories</option>
+            <option disabled>-----------------------------------</option>
+            <option value="550" name="Art">Art</option>
+            <option value="2984" name="Baby">Baby</option>
+            <option value="267" name="Books">Books</option>
+            <option value="11450" name="clothes">Clothing, Shoes & Accesories</option>
+            <option value="58058" name="comp">Computers/Tablets & Networking</option>
+            <option value="26395" name="health">Health & Beauty</option>
+            <option value="11233" name="music">Music</option>
+            <option value="1249" name="games">Video Games & Consoles</option>
+          </select>
         </div>
       </div>
-    </div>
-
-
-
-    <div class="form-group row">
-      <label for="distance" class="col-sm-2 col-form-label">
-        Distance(Miles)
-      </label>
-      <div class="col-sm-3">
-        <input type="text" name="distance" id="distance" placeholder="10"
-               class="form-control" [(ngModel)]="formdetails.distance">
-      </div>
-    </div>
-
-
-
-    <!--<label for="current" class="reqField">-->
-      <!--From-->
-    <!--</label>-->
-    <!--<div class="form-check">-->
-      <!--<input type="radio" name="location" value="current" id="current"-->
-             <!--checked="checked" class="form-control form-check-input" [(ngModel)]="formdetails.location">-->
-      <!--<label for="current" class="form-check-label">Current location</label>-->
-    <!--</div>-->
-
-    <!--<div class="form-check">-->
-    <!--<input type="radio" name="location" id="zip" value="zip" class="form-control form-check-input"-->
-           <!--[(ngModel)]="formdetails.location">-->
-    <!--<label for="zip" class="form-check-label">Other.Please specify zip code</label>-->
-    <!--</div>-->
-    <fieldset class="form-group">
-      <div class="row">
-        <legend class="col-form-label col-sm-2 pt-0 reqField">From</legend>
-        <div class="col-sm-10">
-          <div class="form-check ">
-            <input class="form-check-input" type="radio" name="location" id="current" value="current"
-                   [(ngModel)]="formdetails.location" checked (click)="disableZip()">
-            <label class="form-check-label" for="current">
-              Current Location
-            </label>
+      <!--starts here-->
+      <div class="form-group row">
+        <label for="conditionChkBx" class="col-sm-2 col-form-label">
+          Condition
+        </label>
+        <div class="col-sm-7">
+          <div class="form-check form-check-inline" id="conditionChkBx">
+            <input type="checkbox" name="conditionNew" id="conditionNew" class="form-check-input form-control"
+                   [(ngModel)]="formdetails.conditionNew">
+            <label for="conditionNew" class="form-check-label">New</label>
           </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="location" id="zip" value="zip"
-                   [(ngModel)]="formdetails.location" (click)="enableZip()">
-            <label class="form-check-label" for="zip">
-              Other.Please specify zip code
-            </label>
+          <div class="form-check form-check-inline">
+            <input type="checkbox" name="conditionUsed" id="conditionUsed" class="form-check-input form-control"
+                   [(ngModel)]="formdetails.conditionUsed">
+            <label for="conditionUsed" class="form-check-label">Used</label>
           </div>
-
+          <div class="form-check form-check-inline">
+            <input type="checkbox" name="conditionUnspecified" id="conditionUnspecified"
+                   class="form-check-input form-control" [(ngModel)]="formdetails.conditionUnspecified">
+            <label for="conditionUnspecified" class="form-check-label">Unspecified</label>
+          </div>
         </div>
       </div>
-    </fieldset>
-
-    <br>
-
-    <!--<input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"-->
-           <!--[(ngModel)]="formdetails.zipcode"  [formControl]="zipcode" disabled [matAutocomplete]="auto" autocomplete="off" required> -->
-    <input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"
-           pattern="(^\d{5}$)|(^\d{5}-\d{4}$)" [(ngModel)]="formdetails.zipcode" [formControl]="zipcode" disabled [matAutocomplete]="auto"
-            autocomplete="off" required>
-    <span *ngIf="zipcode.errors&&isZipenabled&&zipcode.touched" style="color: red" class="help-block">Zip code is required</span>
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of ziparray " [value]="option">
-        {{ option }}
-      </mat-option>
-    </mat-autocomplete>
+      <!--ends here-->
 
 
-    <input type="text" hidden="hidden" name="currentlocation" id="iploc" class="form-control"
-           [ngModel]="formdetails.currentlocation">
+      <div class="form-group row">
+        <label for="shipbox" class="col-sm-2 col-form-label">
+          Shipping Options
+        </label>
+        <div class="col-sm-7">
+          <div class="form-check form-check-inline" id="shipbox">
+            <input type="checkbox" name="shippingLocal" id="ship1" class="form-check-input form-control"
+                   [(ngModel)]="formdetails.shippingLocal">
+            <label for="ship1">Local Pickup</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input type="checkbox" name="shippingFree" id="ship2" class="form-check-input form-control"
+                   [(ngModel)]="formdetails.shippingFree">
+            <label for="ship2">Free Shipping</label>
+          </div>
+        </div>
+      </div>
 
 
-    <p style="text-align: left;margin-left: 20px">
+      <div class="form-group row">
+        <label for="distance" class="col-sm-2 col-form-label">
+          Distance(Miles)
+        </label>
+        <div class="col-sm-3">
+          <input type="text" name="distance" id="distance" placeholder="10"
+                 class="form-control" [(ngModel)]="formdetails.distance">
+        </div>
+      </div>
+
+      <fieldset class="form-group">
+        <div class="row">
+          <legend class="col-form-label col-sm-2 pt-0 reqField">From</legend>
+          <div class="col-sm-10">
+            <div class="form-check ">
+              <input class="form-check-input" type="radio" name="location" id="current" value="current"
+                     [(ngModel)]="formdetails.location" checked (click)="disableZip()">
+              <label class="form-check-label" for="current">
+                Current Location
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="location" id="zip" value="zip"
+                     [(ngModel)]="formdetails.location" (click)="enableZip()">
+              <label class="form-check-label" for="zip">
+                Other.Please specify zip code
+              </label>
+            </div>
+
+          </div>
+        </div>
+      </fieldset>
+
+      <br>
+
+      <!--<input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"-->
+      <!--[(ngModel)]="formdetails.zipcode"  [formControl]="zipcode" disabled [matAutocomplete]="auto" autocomplete="off" required> -->
+      <input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"
+             pattern="(^\d{5}$)|(^\d{5}-\d{4}$)" [(ngModel)]="formdetails.zipcode" [formControl]="zipcode" disabled
+             [matAutocomplete]="auto"
+             autocomplete="off" required>
+      <span *ngIf="zipcode.errors&&isZipenabled&&zipcode.touched" style="color: red" class="help-block">Zip code is required</span>
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of ziparray " [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
 
 
-      <button class="btn text-center" style="background-color: white" type="submit" name="search" value="search" id="search" [disabled]="!prodForm.valid||
+      <input type="text" hidden="hidden" name="currentlocation" id="iploc" class="form-control"
+             [ngModel]="formdetails.currentlocation">
+
+
+      <p style="text-align: left;margin-left: 20px">
+
+
+        <button class="btn text-center" style="background-color: white" type="submit" name="search" value="search"
+                id="search" [disabled]="!prodForm.valid||
       (zipcode.errors&&isZipenabled)">
-          <i class="material-icons">
+          <i class="material-icons" style="vertical-align: bottom !important;">
             search
           </i>
           Search
-      </button>
-      &nbsp;
-      <button name="clear" class="btn" type="button" style="background-color: white" value="clear" id="clear" (click)="clearForm(prodForm)">
-        <i class="material-icons">
-          clear_all
-        </i>
-        Clear
-      </button>
-    </p>
+        </button>
+        &nbsp;
+        <button name="clear" class="btn" type="button" style="background-color: white" value="clear" id="clear"
+                (click)="clearForm(prodForm)">
+          <i class="material-icons" style="vertical-align: bottom !important; ">
+            clear_all
+          </i>
+          Clear
+        </button>
+      </p>
 
 
-  </form>
-</div>
+    </form>
+  </div>
   <div class="col-2"></div>
 </div>
 
 <div>
-  <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist" >
+  <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
     <li class="nav-item">
       <a class="nav-link active" id="resultTab" data-toggle="pill" href="#results" role="tab" aria-controls="results"
-         (click)="showChildResult()"  aria-selected="true" >Results</a>
+         (click)="showChildResult()" aria-selected="true">Results</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="wishTab" data-toggle="pill" href="#wishlist" role="tab"
@@ -188,15 +175,15 @@
   </ul>
 </div>
 <div class="tab-content" id="myTabContent">
-<div class="tab-pane fade show active" id="results" role="tabpanel" aria-labelledby="resultTab">
-  <app-results></app-results>
-</div>
+  <div class="tab-pane fade show active" id="results" role="tabpanel" aria-labelledby="resultTab">
+    <app-results></app-results>
+  </div>
 
-<div class="tab-pane fade"  id="wishlist"  role="tabpanel"  aria-labelledby="wishTab">
+  <div class="tab-pane fade" id="wishlist" role="tabpanel" aria-labelledby="wishTab">
 
-  <app-wishlist></app-wishlist>
+    <app-wishlist></app-wishlist>
 
-</div>
+  </div>
 </div>
 
 
