--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -3,9 +3,13 @@
   <div id="formDiv" name="formDiv" class="container col-8"
        style="color: white;background-color: black; font-size: 12px;margin-top: 10px">
 
-    <p style="text-align: center; font-size: 20px;margin-bottom: 30px;margin-top: 15px;"><strong>Product Search</strong></p>
+    <p style="text-align: center; font-size: 20px;margin-bottom: 30px;margin-top: 15px;"><strong>Product Search</strong>
+    </p>
+
 
     <form id="mainForm" #prodForm="ngForm" (ngSubmit)="onFormSubmit(prodForm)" autocomplete="off">
+
+
       <div class="form-group row">
 
         <label for="kword" class="col-sm-2 col-form-label reqField">Keyword</label>
@@ -118,7 +122,7 @@
 
       <!--<input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"-->
       <!--[(ngModel)]="formdetails.zipcode"  [formControl]="zipcode" disabled [matAutocomplete]="auto" autocomplete="off" required> -->
-      <input type="text" name="zipcodebox" placeholder="zip code" id="zipcodebox" class="form-control col-sm-7"
+      <input type="text" name="zipcodebox"  id="zipcodebox" class="form-control col-sm-7"
              pattern="(^\d{5}$)|(^\d{5}-\d{4}$)" [(ngModel)]="formdetails.zipcode" [formControl]="zipcode" disabled
              [matAutocomplete]="auto"
              autocomplete="off" required>
@@ -158,7 +162,7 @@
 
     </form>
   </div>
-  <div class="col-2"></div>
+
 </div>
 
 <div>
