--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,5 +1,5 @@
 <!--<div *ngIf="showpbar&&!(itemDetailsJson&&similarItemsJson&&photosJson)">-->
-<div *ngIf="showpbar">
+<div *ngIf="showpbar||showpbar1||showpbar2">
   <div class="progress">
     <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
@@ -241,9 +241,11 @@
 
   <div *ngIf="sellclicked" id="sellerTab" class="tab-pane fade show active" aria-labelledby="pills-seller-tab">
     <table class="table table-dark table-striped table-hover ">
-      <caption *ngIf="sjson.sellerInfo!=undefined && sjson.sellerInfo[0].sellerUserName!=undefined">
-        {{sjson.sellerInfo[0].sellerUserName[0]}}
-      </caption>
+      <tr *ngIf="sjson.sellerInfo!=undefined && sjson.sellerInfo[0].sellerUserName!=undefined" style="text-align: center" >
+
+        <td>{{sjson.sellerInfo[0].sellerUserName[0]}}</td>
+
+      </tr>
 
       <tr *ngIf="sjson.sellerInfo!=undefined && sjson.sellerInfo[0].feedbackScore!=undefined">
           <td>Feedback Score</td>
