--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -1,7 +1,7 @@
 <!--<div *ngIf="showpbar&&!(itemDetailsJson&&similarItemsJson&&photosJson)">-->
 <div *ngIf="showpbar||showpbar1||showpbar2">
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress " style="width: 70% !important;margin: auto">
+    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 
 </div>
@@ -9,8 +9,9 @@
 
 <div *ngIf="itemDetailsJson&&similarItemsJson&&photosJson&&showResults" class="container">
 
+ <div>{{itemDetailsJson['Item']['Title']}}</div>
   <button (click)="emitToParent()">Back</button>
-  {{itemDetailsJson['Item']['Title']}}
+
 
 
 
@@ -22,7 +23,7 @@
     remove_shopping_cart
   </i>
 
-  <a target="_blank" class="float-right" [href]="link"><img src="http://csci571.com/hw/hw8/Images/facebook.png" width="40px" height="40px"></a>
+  <a target="_blank" class="float-right" [href]="link"><img src="http://csci571.com/hw/hw8/Images/facebook.png" width="30px" height="30px"></a>
   <div>
     <ul class="nav nav-pills mb-3 justify-content-end"  id="pills-tab" role="tablist" >
       <li class="nav-item">
@@ -53,7 +54,10 @@
   <!--(currentRow.title,itemDetailsJson['Item']['CurrentPrice']['Value'],itemDetailsJson['Item']['ViewItemURLForNaturalSearch']-->
   <div *ngIf="prodclicked" id="prodtab" class="tab-pane fade show active" aria-labelledby="pills-prod-tab">
     <div *ngIf="itemDetailsJson==null || itemDetailsJson.Item==undefined || itemDetailsJson.Item.length==0">
-      No product details
+
+      <div class="alert alert-warning container" role="alert">
+        No product details
+      </div>
     </div>
     <div *ngIf="itemDetailsJson!=undefined && itemDetailsJson.Item!=undefined && itemDetailsJson.Item.length!=0">
       <table class="table table-dark table-striped table-hover ">
@@ -118,8 +122,10 @@
 
   <div *ngIf="photclicked" id="photostab" class="tab-pane fade show active" aria-labelledby="pills-photos-tab">
 
-    <div *ngIf="photosJson!=undefined&&photosJson.items==undefined || photosJson.items.length==0">
-      No photos found
+    <div *ngIf="photosJson==undefined&&photosJson.items==undefined || photosJson.items.length==0">
+      <div class="alert alert-warning container" role="alert">
+        No photos found.
+      </div>
     </div>
 
     <div *ngIf="photosJson.items!=undefined && photosJson.items.length!=0">
@@ -321,7 +327,9 @@
  ||similarItemsJson.getSimilarItemsResponse.itemRecommendations==undefined||
  similarItemsJson.getSimilarItemsResponse.itemRecommendations.item==undefined||
  similarItemsJson.getSimilarItemsResponse.itemRecommendations.item.length==0">
-      No similar items
+      <div class="alert alert-warning container" role="alert">
+        No similar items.
+      </div>
     </div>
     <div *ngIf="similarItemsJson!=undefined&&similarItemsJson.getSimilarItemsResponse!=undefined
  &&similarItemsJson.getSimilarItemsResponse.itemRecommendations!=undefined&&
