--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,24 +1,35 @@
 <div *ngIf="showProgress">
-  <div class="progress">
-    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress " style="width: 80% !important;margin: auto">
+    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
 
 </div>
 
 
-<div *ngIf="showresults&&searchJson">
+<div *ngIf="showresults&&searchJson" class="container">
+
+  <button class="btn" [disabled]="!isDetailSearchPerformed" (click)="callChild(currentRow['itemId']['0'],currentRow.title,currentRow,1)" style="float: right" id="det">Detail
+    <i class="material-icons alignWithDetail">
+      chevron_right
+    </i>
+  </button>
+  <br>
   <!--error div-->
   <div *ngIf="error">
+    <div class="alert alert-warning container" role="alert">
+      {{ errorMessage }}
+    </div>
 
-    {{ errorMessage }}
 
   </div>
+
 
   <!--result table div-->
   <div *ngIf="!error" class="container">
 
-<button class="btn" [disabled]="!isDetailSearchPerformed" (click)="callChild(currentRow['itemId']['0'],currentRow.title,currentRow,1)">Detail</button>
-    <table class="table table-dark table-striped table-hover">
+
+    <div class="table-responsive">
+    <table class="table table-dark table-striped table-hover" style="margin-top: 20px">
       <tr>
         <th scope="col">#</th>
         <th scope="col">Image</th>
@@ -39,7 +50,7 @@
           <a href="#" data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}"
 
                (click)="callChild(row['itemId']['0'],row.title,row,1)">
-            {{  row.title == null ? 'N/A' : (row.title.toString().length > 50 ? (row.title.toString().substring(0, 50).slice(-1) == ' ' ? (row.title.toString().substring(0, 50) + '...') : (row.title.toString().substring(0, (row.title.toString().substring(0, 50).lastIndexOf(' '))) + '...')) : row.title.toString())
+            {{  row.title == null ? 'N/A' : (row.title.toString().length > 35 ? (row.title.toString().substring(0, 35).slice(-1) == ' ' ? (row.title.toString().substring(0, 35) + '...') : (row.title.toString().substring(0, (row.title.toString().substring(0, 35).lastIndexOf(' '))) + '...')) : row.title.toString())
           }}</a>
         </td>
         <td *ngIf="row.title==undefined">
@@ -77,26 +88,31 @@
 
 
         <td *ngIf="!this.itSet.has(row.itemId[0])">
-          <i class="material-icons" (click)="addToWish(row)">
-            add_shopping_cart
-          </i>
+          <button class="btn btn-light">
+            <i class="material-icons" (click)="addToWish(row)">
+              add_shopping_cart
+            </i>
+          </button>
         </td>
         <td *ngIf="this.itSet.has(row.itemId[0])">
-          <i class="material-icons" style="color: gold" (click)="removeFromWish(row)">
-            remove_shopping_cart
-          </i>
+          <button class="btn btn-light">
+            <i class="material-icons" style="color: gold" (click)="removeFromWish(row)">
+              remove_shopping_cart
+            </i>
+          </button>
         </td>
 
 
       </tr>
 
     </table>
+    </div>
     <ngb-pagination
       [(page)]="page"
       [pageSize]="pageSize"
       [collectionSize]="searchJson.findItemsAdvancedResponse[0].searchResult[0].item.length"
       class="d-flex justify-content-center">
-      <ng-template ngbPaginationPrevious>&#8249;&#8249;Prev</ng-template>
+      <ng-template ngbPaginationPrevious>&#8249;&#8249;Previous</ng-template>
       <ng-template ngbPaginationNext>Next &#8250;&#8250;</ng-template>
       <ng-template ngbPaginationNumber let-page>{{ page }}</ng-template>
     </ngb-pagination>
