--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -2,4 +2,16 @@
   background-color: #d0d0d0 !important;
 }
 
+.alignWithDetail{
+  vertical-align: bottom;
+}
 
+#wishDet{
+
+  background-color: rgba(1,1,1,0.04) !important;
+}
+
+.wishImage{
+  width: 150px;
+  height: 150px;
+}
